src/test/ui/rust-2018/uniform-paths/ambiguity.stderr
error: `std` import is ambiguous
  --> $DIR/ambiguity.rs:15:5
   |
LL |   use std::io;
   |       ^^^ can refer to external crate `::std`
...
LL | / mod std {
LL | |     pub struct io;
LL | | }
   | |_- can refer to `self::std`
   |
   = help: write `::std` or `self::std` explicitly instead
   = note: relative `use` paths enabled by `#![feature(uniform_paths)]`

error: aborting due to previous error

